[tool.poetry]
name = "logot"
version = "0.1.1"
description = "Log-based testing"
authors = ["Dave Hall <dave@etianen.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://logot.readthedocs.io"
repository = "https://github.com/etianen/logot"
documentation = "https://logot.readthedocs.io"
keywords = ["test", "unittest", "pytest", "logging"]
classifiers = [
    "Framework :: Pytest",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: Unit",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]
packages = [{ include = "logot" }]

[tool.poetry.dependencies]
python = "^3.8"
pytest = { version = "^7.4.4", optional = true }

[tool.poetry.extras]
pytest = ["pytest"]

[tool.poetry.group.dev.dependencies]
coverage = "^7.4.1"
hypothesis = "^6.96.1"
mypy = "^1.8.0"
ruff = "^0.1.11"
pytest = "*"
pytest-asyncio = "^0.23.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
furo = { version = "*", markers = "python_version >= '3.12'" }
sphinx = { version = "7.2.6", markers = "python_version >= '3.12'" }
sphinx-autobuild = { version = "*", markers = "python_version >= '3.12'" }

[tool.poetry.plugins.pytest11]
logot = "logot._pytest"

[tool.coverage.run]
source = ["logot", "tests"]

[tool.coverage.report]
show_missing = true
skip_covered = true
fail_under = 100
exclude_lines = ["pragma: no cover", "raise NotImplementedError"]

[tool.mypy]
files = ["logot/**/*.py", "tests/**/*.py"]
allow_redefinition = true
explicit_package_bases = true
show_column_numbers = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
console_output_style = "classic"
addopts = "--tb=native --import-mode=importlib"
asyncio_mode = "auto"

[tool.ruff]
include = ["docs/**/*.py", "logot/**/*.py", "tests/**/*.py"]
line-length = 120
select = ["E", "F", "W", "I", "UP"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
